# backend-automated-problem-generation-lib

./: .gitignore  .gitlab-ci.yml  AGENTS.md  LICENSE  Pipfile  README 2.md  README.md  Vagrantfile  big_broker.yml  files.txt  generator.py  key  key.pub  name.yml  names.txt  players.yml  pyproject.toml  requirements.txt  sandbox.yml  setup.cfg  setup.py  tox.ini  yml_initializer.py
.github/workflows/: github-actions.yml
.vagrant/machines/br/virtualbox/: vagrant_cwd
.vagrant/provisioners/ansible/inventory/: vagrant_ansible_inventory
Base_config/: README.md  Vagrantfile  create.py
Base_config/base_provisioning/: device_configuration.yml
Base_config/base_provisioning/roles/br/tasks/: main.yml
Base_config/base_provisioning/roles/home/tasks/: main.yml
Base_config/base_provisioning/roles/server/tasks/: main.yml
Base_config/modules/: ansible_data_generator.py  device_creator.py  file_generator.py  provider.py  routing.py
Base_config/name_mapping/: interface.yml  mapping.yml
Base_config/provisioning/roles/hosts/tasks/: main.yml
Base_config/provisioning/roles/kypo-creator-accounts/defaults/: main.yml
Base_config/provisioning/roles/kypo-creator-accounts/tasks/: main.yml
Base_config/provisioning/roles/server/tasks/: main.yml
Base_config/templates/: br  device_configuration  hosts  playbook  routers  separate_hosts  user_telnet_port  vagrantfile
base_provisioning/roles/routers/tasks/: main.yml
generator/: README.md  __init__.py  generator.py  load_var_from_file.py  names.txt  package_remover.py  test.py  text.txt  var_generator.py  var_object.py  var_parser.py  variables.yml
generator.egg-info/: PKG-INFO  SOURCES.txt
generator_pkg_485652.egg-info/: PKG-INFO  SOURCES.txt
generator_pkg_485652_Daniel_Kosc.egg-info/: PKG-INFO  SOURCES.txt
modules/: attribute_formatter.py  network_parser.py
name_mapping/: flavors.yml
provisioning/: old.yml  old2.yml  playbook.yml
provisioning/roles/home/tasks/: main.yml
provisioning/roles/kypo-creator-accounts/: README.md
templates/: playbook  user_hosts  user_separate_hosts
tests/: unit_test.py  variables.yml
